// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditTeamDialog > renders correctly 1`] = `
<div
  data-v-762ee05e=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-762ee05e=""
    iconcolor="secondary-text"
    title="Operators"
    titleicon="M12,15C7.58,15 4,16.79 4,19V21H20V19C20,16.79 16.42,15 12,15M8,9A4,4 0 0,0 12,13A4,4 0 0,0 16,9M11.5,2C11.2,2 11,2.21 11,2.5V5.5H10V3C10,3 7.75,3.86 7.75,6.75C7.75,6.75 7,6.89 7,8H17C16.95,6.89 16.25,6.75 16.25,6.75C16.25,3.86 14,3 14,3V5.5H13V2.5C13,2.21 12.81,2 12.5,2H11.5Z"
  />
  <v-card-text-stub
    class="pb-0 dialog-content"
    data-v-762ee05e=""
    tag="div"
  >
    <evocon-v-input-stub
      clearable=""
      data-v-762ee05e=""
      density="default"
      filled="true"
      grow="false"
      hide-details=""
      modelvalue=""
      placeholder="Search"
      prepend-inner-icon="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
      truncateinput="false"
      type="text"
      usechip="false"
    />
    <v-form-stub
      data-v-762ee05e=""
      disabled="false"
      fastfail="false"
      modelvalue="true"
      validateon="input"
    >
      <div
        class="mt-2 operator-select"
        data-v-762ee05e=""
      >
        
        <evocon-v-checkbox-stub
          class="px-4 my-4"
          dark="false"
          data-v-762ee05e=""
          density="default"
          disabled="false"
          hide-details=""
          label="Operator 1"
          modelvalue=""
          sublabel=""
          truevalue="1"
        />
        <evocon-v-checkbox-stub
          class="px-4 my-4"
          dark="false"
          data-v-762ee05e=""
          density="default"
          disabled="false"
          hide-details=""
          label="Operator 2"
          modelvalue=""
          sublabel=""
          truevalue="2"
        />
        <evocon-v-checkbox-stub
          class="px-4 my-4"
          dark="false"
          data-v-762ee05e=""
          density="default"
          disabled="false"
          hide-details=""
          label="Operator 3"
          modelvalue=""
          sublabel=""
          truevalue="3"
        />
        
      </div>
      <v-row-stub
        class="mt-4"
        data-v-762ee05e=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="mb-2"
          cols="12"
          data-v-762ee05e=""
          lg="false"
          md="false"
          sm="6"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-time-input-stub
            class="mr-sm-1"
            data-v-762ee05e=""
            density="default"
            hint="Start time"
            modelvalue=""
            rules="function () { [native code] }"
            usechip="false"
          />
        </v-col-stub>
        <v-col-stub
          class="mb-2"
          cols="12"
          data-v-762ee05e=""
          lg="false"
          md="false"
          sm="6"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-time-input-stub
            class="ml-sm-1"
            data-v-762ee05e=""
            density="default"
            hint="End time"
            modelvalue=""
            rules="function () { [native code] }"
            usechip="false"
          />
        </v-col-stub>
      </v-row-stub>
    </v-form-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class="justify-end"
    data-v-762ee05e=""
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      data-v-762ee05e=""
      icon=""
      iconcolor=""
      text="Cancel"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      data-v-762ee05e=""
      disabled="true"
      icon=""
      iconcolor=""
      loading="false"
      text="Save"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`EditTeamDialog > renders correctly if station has no operators 1`] = `
<div
  data-v-762ee05e=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-762ee05e=""
    iconcolor="secondary-text"
    title="Operators"
    titleicon="M12,15C7.58,15 4,16.79 4,19V21H20V19C20,16.79 16.42,15 12,15M8,9A4,4 0 0,0 12,13A4,4 0 0,0 16,9M11.5,2C11.2,2 11,2.21 11,2.5V5.5H10V3C10,3 7.75,3.86 7.75,6.75C7.75,6.75 7,6.89 7,8H17C16.95,6.89 16.25,6.75 16.25,6.75C16.25,3.86 14,3 14,3V5.5H13V2.5C13,2.21 12.81,2 12.5,2H11.5Z"
  />
  <empty-view-stub
    class="dialog-content"
    data-v-762ee05e=""
    description="To add operators for this station, please go to operator settings."
    descriptionrows=""
    header="No operators available."
    imgurl="operators"
    imgwidth=""
    primarybtn="Go to settings"
    primarybtnicon=""
    secondarybtn=""
    secondarybtncolor=""
    secondarybtnicon=""
    small="false"
    tertiarybtn=""
    tertiarybtnicon=""
  />
  <v-card-actions-stub
    class="justify-end"
    data-v-762ee05e=""
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      data-v-762ee05e=""
      icon=""
      iconcolor=""
      text="Close"
      textclass=""
      type="secondary"
    />
    <!--v-if-->
  </v-card-actions-stub>
</div>
`;

exports[`EditTeamDialog > renders correctly if station has no operators and user is not admin 1`] = `
<div
  data-v-762ee05e=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-762ee05e=""
    iconcolor="secondary-text"
    title="Operators"
    titleicon="M12,15C7.58,15 4,16.79 4,19V21H20V19C20,16.79 16.42,15 12,15M8,9A4,4 0 0,0 12,13A4,4 0 0,0 16,9M11.5,2C11.2,2 11,2.21 11,2.5V5.5H10V3C10,3 7.75,3.86 7.75,6.75C7.75,6.75 7,6.89 7,8H17C16.95,6.89 16.25,6.75 16.25,6.75C16.25,3.86 14,3 14,3V5.5H13V2.5C13,2.21 12.81,2 12.5,2H11.5Z"
  />
  <empty-view-stub
    class="dialog-content"
    data-v-762ee05e=""
    description="Please contact your administrator."
    descriptionrows=""
    header="No operators available."
    imgurl="operators"
    imgwidth=""
    primarybtn=""
    primarybtnicon=""
    secondarybtn=""
    secondarybtncolor=""
    secondarybtnicon=""
    small="false"
    tertiarybtn=""
    tertiarybtnicon=""
  />
  <v-card-actions-stub
    class="justify-end"
    data-v-762ee05e=""
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      data-v-762ee05e=""
      icon=""
      iconcolor=""
      text="Close"
      textclass=""
      type="secondary"
    />
    <!--v-if-->
  </v-card-actions-stub>
</div>
`;
